# evalmonkey

./: .env.example  .gitignore  README.md  pyproject.toml  schema.yml
.github/workflows/: ci.yml
apps/framework_adapters/: autogen_adapter.py  bedrock_agentcore_adapter.py  crewai_adapter.py  langchain_adapter.py  openai_agents_adapter.py
apps/rag_app/: app.py
apps/research_agent/: app.py
evalmonkey/: mcp_server.py
evalmonkey/config/: agent_config.py
evalmonkey/evals/: asset_generator.py  local_assets.py  runner.py
evalmonkey/reporting/: history.py  markdown.py
evalmonkey/scenarios/: standard_benchmarks.py
evalmonkey/simulator/: load_gen.py
evalmonkey/utils/: llm.py
scripts/: cli.py
tests/: test_asset_generator.py  test_components.py  test_history.py  test_local_assets.py  test_mcp_server.py
